# lab

./: .gitignore  COPYRIGHT.md  Makefile  README.md  announce.go  composition.toml  go.mod  go.sum  heartbeat.go  main.go  manifest.toml
analysis/: pex.py  pyproject.toml
cmd/lab/: main.go
internal/cmd/: events.go  log.go  start.go
internal/cmd/app/: casm.js  graph.json  index.html  index.js
matrix/: go.mod  go.sum
matrix/clustering/: clustering.go
matrix/pex/: pex.go
pkg/: boot.go  boot_test.go  graph.go  lab.go
pkg/boot/: boot.go  boot_test.go  topology.go  topology_test.go
pkg/graph/: graph.go
pkg/sim/: cluster.go  events.go  model.go
pkg/topology/: topology.go
pkg/util/boot/: boot.go
pkg/util/log/: log.go
plan/announce/: announce.go
scripts/: animated_histogram.ipynb  animated_histogram.py  convergence.py  pex_analysis.py  pex_emulator.py  pex_simulator.py  pex_simulator_underlay.py  plot_convergence.py  preprocess.py  pyproject.toml  requirements.txt
simulator/: pex.py  pex_initial.py  pyproject.toml
test/announce/: announce.go
test/canary/: canary.go
testground/: go.mod  go.sum  main.go  manifest.toml
testground/pkg/boot/: boot.go  topology_test.go
testground/tests/: pex.go
tests/pex/: convergence.go  convergence_matrix.go  dns_test.go  fanout.go  pex.go  resiliency.go  strategy.go
testutil/: discover.go  log.go
