[tool.poetry]
name = "casm-analysis"
version = "0.1.0"
description = ""
authors = ["aratz <aratz.m.lasa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jirafs-matplotlib = "^1.0.3"
vnpy-influxdb = "^1.0.1"
click8 = "^8.0.1"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
