[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pandas = "~=1.3.3"
notebook = "6.4.3"
matplotlib = "^3.4.3"
influxdb = "5.3.1"

[tool.poetry.dev-dependencies]
ipython = {extras = ["all"], version = "^7.29.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
