[tool.poetry]
name = "casm-simulator"
version = "0.1.0"
description = ""
authors = ["aratz <aratz.m.lasa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx-query = "^1.0.1"
vnpy-influxdb = "^1.0.1"
click8 = "^8.0.1"
numpy1 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
